[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Players/Player.gd" type="Script" id=1]
[ext_resource path="res://Scenes/weapons/Projectile.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Events/Levelup/levelup.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.0
height = 39.4797

[node name="Player" type="Area2D"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Pickable" ]
__meta__ = {
"_edit_group_": true
}
Projectile = ExtResource( 2 )
Levelup = ExtResource( 3 )
SPEED = 400

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

position = Vector2( 2, 0 )
scale = Vector2( 0.15, 0.15 )
animation = ""
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( -2.70156, 1.34573 )
scale = Vector2( 1.75343, 2.10318 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]

[node name="FireRangeTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.75
one_shot = false
autostart = false

[node name="FireSpeedTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 0.25
one_shot = false
autostart = false

[node name="DodgeDetectTimer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 0.15
one_shot = true
autostart = false

[node name="DodgeDelayTimer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 1.5
one_shot = true
autostart = false

[node name="ActivelyDodgingTimer" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[node name="Camera2D" type="Camera2D" parent="." index="7"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 50.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Drag Margin", "Limit", "Offset", "Smoothing", "Transform", "Z Index" ]

[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]

[connection signal="timeout" from="FireRangeTimer" to="." method="addBullet"]

[connection signal="timeout" from="FireSpeedTimer" to="." method="_on_FireSpeedTimer_timeout"]

[connection signal="timeout" from="DodgeDetectTimer" to="." method="_on_DodgeDetectTimer_timeout"]

[connection signal="timeout" from="DodgeDelayTimer" to="." method="_on_DodgeDelayTimer_timeout"]

[connection signal="timeout" from="ActivelyDodgingTimer" to="." method="_on_ActivelyDodgingTimer_timeout"]


